--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,8 +1,9 @@
 set -g default-terminal "tmux-256color"
+set -ga terminal-overrides ",xterm-256color:Tc"
 
-set -g prefix C-a
+set -g prefix C-Space
 unbind C-b
-bind-key C-a send-prefix
+bind-key C-Space send-prefix
 
 unbind %
 bind | split-window -h
@@ -36,7 +37,10 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'tmux-plugins/tmux-resurrect' # persist tmux sessions after computer restart
 set -g @plugin 'tmux-plugins/tmux-continuum' # automatically saves sessions for you every 15 minutes
-set -g @plugin 'fabioluciano/tmux-tokyo-night'
+set -g @plugin 'catppuccin/tmux#v2.1.2'
+
+# set catppuccin theme
+set -g @catppuccin_flavor 'mocha'
 
 set -g @resurrect-capture-pane-contents 'on'
 set -g @continuum-restore 'on'
